@@ -25,5 +25,6 @@ uint32_t mt_get_seed(struct mt *self);
 void mt_init_seed(struct mt *self, uint32_t seed);
 void mt_setup_array(struct mt *self, uint32_t *array, int n);
 double mt_genrand(struct mt *self);
+uint32_t mt_genirand(struct mt *self);
 
 #endif
