@@ -3,17 +3,26 @@ use strict;
 use Test;
 use vars qw($loaded $num1 $num2);
 
-BEGIN { plan tests => 7 }
+BEGIN { plan tests => 12 }
 END   { print "not ok 1\n" unless $loaded }
 
-use Math::Random::MT qw(srand rand);
+use Math::Random::MT qw(srand rand irand);
 ok($loaded = 1);
 srand; # explicit srand, but without number
+
 eval { $num1 = rand; };
 ok($@, '', '$@ should be empty after rand()');
 ok(defined($num1));
 ok(0 <= $num1);
 ok($num1 < 1); # rand without argument is like rand(1)
 eval { $num2 = rand; };
+ok($@, '', '$@ should also be empty the second time rand() is called');
+ok($num1 != $num2);
+
+eval { $num1 = irand; };
+ok($@, '', '$@ should be empty after rand()');
+ok(defined($num1));
+ok(0 <= $num1);
+eval { $num2 = irand; };
 ok($@, '', '$@ should also be empty the second time rand() is called');
 ok($num1 != $num2);
