@@ -3,7 +3,7 @@ use strict;
 use Test;
 use vars qw($loaded);
 
-BEGIN { plan tests => 5 }
+BEGIN { plan tests => 7 }
 END   { print "not ok 1\n" unless $loaded }
 
 # OO interface
@@ -15,7 +15,9 @@ my $gen;
 ok($loaded = 1);
 ok( $gen = Math::Random::MT->new(1, 2, 3, 4) );
 ok( (sprintf"%.12f",$gen->rand(1)), 0.678865759168 );
+ok( $gen->irand, 1022996879 );
 
 # high value seeds broke initial implementation of mt_setup_array()
 ok( $gen = Math::Random::MT->new(1, 2, 3, 2**31) );
 ok( (sprintf"%.12f",$gen->rand(1)), 0.336814725539 );
+ok( $gen->irand, 1615524784 );
