@@ -9,7 +9,7 @@ END   { print "not ok 1\n" unless $loaded }
 
 # Make sure that automatic seeds generated close in time are different.
 
-use Math::Random::MT qw(srand rand);
+use Math::Random::MT qw(srand);
 ok($loaded = 1);
 # Generate a series of 3 random numbers using an autogenerated seed
 ok($autoseed1 = srand());
